@@ -4,7 +4,9 @@
 dialogfe (05 Jan 2005):
 
   19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Updated partition code.
+  Updated partition code to work with newer version of GLIStorageDevice.
+  Updated set_network_mounts to work with separate netmounts structure in
+  InstallProfile and fixed some bugs.
 
   16 Mar 2005; Preston Cody <codeman@gentoo.org>
   Fixing more bugs.  added dns server support.
