@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.87 2005/03/19 04:39:35 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.88 2005/03/19 09:10:57 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Fixed a couple bugs in add_netmount() in GLIInstallProfile.
 
   18 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Add sigunmask.c contributed by d_m (on freenode) to counteract python's
